--- a/docs/guides/runtime-options-overview.mdx
+++ b/docs/guides/runtime-options-overview.mdx
@@ -67,14 +67,14 @@ Scroll to see the full table.
 | [default_precision](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.EstimatorOptions)    |                          |                     |  float > 0     | `0.015625 (1 / sqrt(4096))`     | default_precision    |
 | [dynamical_decoupling](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.DynamicalDecouplingOptions) |                          |                         |              |                     | dynamical_decoupling |
 |                      | enable                   |                         | `True`/`False`                                                             |    `False`           |                      |
-|                      | sequence_type            |                         | `XX`/`XpXm`/`XY4`                                                         | `XX`                      |                      |
 |                      | extra_slack_distribution |                         | `middle`/`edges`                                                                  | `middle`                  |                      |
 |                      | scheduling_method        |                         | `asap`/`alap`                                                                      | `alap`                    |                      |
+|                      | sequence_type            |                         | `XX`/`XpXm`/`XY4`                                                         | `XX`                      |                      |
 |                      | skip_reset_qubits        |                         | `True`/`False`                                                                                   | `False`                 |                    |
 | [environment](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.EnvironmentOptions)          |                          |     |             |                                  | environment          |
-|                      | log_level                |                         |`DEBUG`/`INFO`/`WARNING`/`ERROR`/`CRITICAL`                 |`WARNING`                          |                      |
 |                      | callback                 |                         |Callable function that receives Job ID and Job result.                             |`None`                           |                      |
 |                      | job_tags                 |                         |List of tags                                                                     |`None`                           |                      |
+|                      | log_level                |                         |`DEBUG`/`INFO`/`WARNING`/`ERROR`/`CRITICAL`                 |`WARNING`                          |                      |
 |                      | private                  |                         |`True`/`False`                                                                      |`False`                           |                      |
 | [execution](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.ExecutionOptionsV2)            |                          |                         |               |                           | execution            |
 |                      | init_qubits              |                         | `True`/`False`                                                                         | `True`                    |                      |
@@ -82,10 +82,10 @@ Scroll to see the full table.
 | [max_execution_time](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.EstimatorOptions)   |                          |       | Integer number of seconds in the range  [1, 10800]    | `10800` (3 hours)   | max_execution_time   |
 | [resilience](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.ResilienceOptionsV2)           |                          |      |                               |                      | resilience    |
 |                      | layer_noise_learning     |      | `True`/`False`                | `True`               |      |
-|                      |                          | max_layers_to_learn     |  `None`/ integer >= 1                                                                      | `4`                    |                      |
-|                      |                          | shots_per_randomization |  integer >= 1                                                                         |  `128`                    |                      |
-|                      |                          | num_randomizations      |   integer >= 1                                                                            |  `32`                    |                      |
 |                      |                          | layer_pair_depths       |  list[int] of 2-10 values in the range [0, 200]                           | `(0, 1, 2, 4, 16, 32)`              |                      |
+|                      |                          | max_layers_to_learn     |  `None`/ integer >= 1                                                                      | `4`                    |                      |
+|                      |                          | num_randomizations      |   integer >= 1                                                                            |  `32`                    |                      |
+|                      |                          | shots_per_randomization |  integer >= 1                                                                         |  `128`                    |                      |
 |                      | layer_noise_model       |        | `NoiseLearnerResult`/`Sequence[LayerError]`                      | `None`                      |                      |
 |                      | measure_mitigation       |        | `True`/`False`                      | `True`                      |                      |
 |                      | measure_noise_learning   | num_randomizations      |  integer >= 1  | `32`                      |                      |
@@ -94,17 +94,17 @@ Scroll to see the full table.
 |                      | pec   | max_overhead            |  `None`/ integer >1          | `100`                      |                      |
 |                      |                          | noise_gain              |  `auto`/ float in the range `[0, 1]`                                                     | `auto`                    |                      |
 |                      | zne_mitigation           |                         | `True`/`False`                                                                         | `False`                     |                      |
-|                      | zne                      | noise_factors           |   list of floats; each float >= 1     | `(1, 1.5, 2)` for PEA, and `(1, 3, 5)` otherwise. |                      |
-|                      |                          | amplifier               | `gate_folding`, `gate_folding_front`, `gate_folding_back, pea                              `  | `gate_folding` |                      |
+|                      | zne                      | amplifier               | `gate_folding`, `gate_folding_front`, `gate_folding_back, pea                              `  | `gate_folding` |                      |
 |                      |                          | extrapolated_noise_factors |         list of floats  |  `[0, *noise_factors]`|                      |
 |                      |                          | extrapolator            | one or more of `exponential`<br />`linear`<br />`double_exponential`<br />`polynomial_degree_(1 <= k <= 7)`<br />`fallback` | (`exponential`, `linear`) |                      |
+|                      |                          | noise_factors           |   list of floats; each float >= 1     | `(1, 1.5, 2)` for PEA, and `(1, 3, 5)` otherwise. |                      |
 | [resilience_level](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.EstimatorOptions)     |                          |                         | `0`/`1`/`2`    | `1`                         |     resilience_level   |
 | [seed_estimator](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.EstimatorOptions)       |                          |                         |  integer         |     `None`               |   seed_estimator   |
 | [simulator](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.SimulatorOptions)            |                          |                         |                |                     |   simulator   |
+|                      | basis_gates              |                         |  List of basis gate names to unroll to   | The set of all basis gates supported by [Qiskit Aer simulator](https://qiskit.github.io/qiskit-aer/stubs/qiskit_aer.AerSimulator.html) |                      |
+|                      | coupling_map             |                         |  List of directed two-qubit interactions                                                | full connectivity     |                      |
 |                      | noise_model              |                         |   [Qiskit Aer NoiseModel](build-noise-models), or its representation        | `None`                      |                      |
 |                      | seed_simulator           |                         |   integer                                                                               | `None`                    |                      |
-|                      | coupling_map             |                         |  List of directed two-qubit interactions                                                | full connectivity     |                      |
-|                      | basis_gates              |                         |  List of basis gate names to unroll to   | The set of all basis gates supported by [Qiskit Aer simulator](https://qiskit.github.io/qiskit-aer/stubs/qiskit_aer.AerSimulator.html) |                      |
 | [twirling](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.TwirlingOptions)             |                          |                         |             |                       |     twirling     |
 |                      | enable_gates             |                         | `True`/`False`                                                                           | `False`                     |                      |
 |                      | enable_measure           |                         | `True`/`False`                                                                       | `True`                      |                      |
